# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: build.yml  my_workflow.yml  sonar.yml
gendiff/formatters/: format_identifier.py  json_formatter.py  plain.py  stylish.py
gendiff/scripts/: find_diff.py  gendiff.py  generate_diff.py  parser.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
python_project_50.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_gendiff.py
tests/test_data/: expected_result_json_format.txt  expected_result_plain.txt  expected_result_yaml.txt
